Bug 479341 - make WeaveCrypto::GenerateKeypair() call PK11_GenerateKeyPairWithOpFlags(). bacon=thunder